# bachelorprojekt

./: dataTest.py  environment.yml
.github/workflows/: SimpleAI_Image  main.yml  python-package-conda.yml  python-publish.yml
BigFlowPrototypes/: README.MD  bipbop.ipynb
BigFlowPrototypes/BigFlowPrototypes/: Linear.py  Linear_Embeded.py  test_data_processing_comparison.py
BigFlowPrototypes/test/: test_end_to_end_data_processing.py
BigFlowPrototypes/tests/: test_end_to_end_data_processing.py
DataAnalytics/: demo_copy.py
DataPreparation/DataCleaner/: dataCleaner.py  dataTransformer.py
DataPreparation/DataReduction/: featureSelector.py
DataPreparation/DataTransformation/: categoricalEncoder.py  featureEngineer.py
OpenAITests/: bipbop.ipynb
OpenAITests/tests/: TestEmbedingAPI.py
QuartoDemo/: dataAnalyticsDemo.qmd  demo.html  demo.qmd
Showcases/LinearProblems/: DataPrepartionExample2.ipynb  OpenAIExample.ipynb  SimpleModel.ipynb  SpacyExample.ipynb  hyperparameter_tuning_results.csv
Showcases/SimulationPrototype/: bigflow.ipynb
SimpleAI_Image/: requirements.txt  requirments.txt
SimpleAI_Image/SimpleAI_Image/: DataProcessor.py  DatabaseHandler.py
SimpleAI_Image/tests/: TestDataProcessor.py  TestDatabaseHandler.py  requirements.txt
StandardAI/: test_duplicates_log.csv
preprocess_ai/: increment_version.py  pyproject.toml  setup.py
preprocess_ai/DataAnalytics/: pyproject.toml
preprocess_ai/preprocess_ai/DataAnalytics/: demo.ipynb
tests/dataCleaning_integration_test/: remove_empty_data_and_duplicates_test.py
(+5 files in other folders)
