[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocess_ai"
version = "0.1.0"
description = "A description of your project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "sqlalchemy",
    "pgvector",
    "matplotlib",
    "tensorflow",
    "scikit-learn",
    "openai"
]
