[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocess_ai"
version = "0.1.0"
description = "A package for preprocessing data for AI models."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "sqlalchemy",
    "pgvector",
    "matplotlib",
    "tensorflow",
    "scikit-learn",
    "openai"
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = ["readme", "requires-python", "classifiers"]

[tool.setuptools]
packages = ["preprocess_ai"]
